--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,10 @@ django-debug-toolbar = "*"
 django-environ = "*"
 werkzeug = "*"
 django-extensions = "*"
+django-registration-redux = "*"
 
 [dev-packages]
+flake8 = "*"
 
 [requires]
 python_version = "3.9"
